--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@excaliburjs/dev-tools",
-  "version": "0.28.0",
+  "version": "0.29.0",
   "description": "Excalibur Debug Tools",
   "source": "./dev-tools.ts",
   "main": "./dist/dev-tools.js",
@@ -19,7 +19,7 @@
     "@parcel/packager-ts": "^2.6.2",
     "@parcel/transformer-glsl": "^2.6.2",
     "@parcel/transformer-typescript-types": "^2.6.2",
-    "excalibur": "~0.28.1",
+    "excalibur": "^0.29.3",
     "parcel": "2.6.2",
     "ts-loader": "9.3.1",
     "typescript": "4.7.4",
@@ -28,6 +28,6 @@
     "webpack-cli": "4.10.0"
   },
   "peerDependencies": {
-    "excalibur": "~0.28.1"
+    "excalibur": "~0.29.3"
   }
 }
